fix align of drop btn on cartbar

--- a/assets/styles/modules/global/_cart_bar.scss
+++ b/assets/styles/modules/global/_cart_bar.scss
@@ -119,7 +119,7 @@
 
                 &__drop{
                     position: absolute;
-                    right: 3em;
+                    right: 0; //keep icon out from text
                     width: 1.25em;
                     height: 1.25em;
                     cursor: pointer;
